--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -18,11 +18,11 @@ article_header:
         {%- assign _section_id = "hero-" | append: forloop.index -%}
     {%- endif -%}
     {%- if _section.theme == 'light' -%}
-      <section class="hero hero--center hero--light" id="{{ _section_id }}"
+      <section class="hero hero--center hero--light" id="{{ _section_id }}" fade-in="{{ _section.fade-in | default: "none" }}"
     {%- elsif _section.theme == 'dark' -%}
-      <section class="hero hero--center hero--dark" id="{{ _section_id }}"
+      <section class="hero hero--center hero--dark" id="{{ _section_id }}" fade-in="{{ _section.fade-in | default: "none" }}"
     {%- else -%}
-      <section class="hero hero--center" id="{{ _section_id }}"
+      <section class="hero hero--center" id="{{ _section_id }}" fade-in="{{ _section.fade-in | default: "none" }}"
     {%- endif -%}
     {%- if _section.background_color -%}
         style="background-image: url({{ _url }}); background-color: {{ _section.background_color }};">
@@ -181,3 +181,6 @@ article_header:
 </div>
 
 {{ content }}
+<script>
+  {%- include scripts/fade-in-on-view.js -%}
+</script>
