feat: CSS : Add bitcoin color

--- a/_sass/skins/_ocean.scss
+++ b/_sass/skins/_ocean.scss
@@ -69,6 +69,7 @@ $douban-color:     #42bd56;
 $linkedin-color:   #1074af;
 $github-color:     #000;
 $npm-color:        #fff;
+$bitcoin-color:    #f7931A;
 
 // highlight colors
 @import "skins/highlight/tomorrow-night-blue";
