--- a/_sass/components/_author-links.scss
+++ b/_sass/components/_author-links.scss
@@ -38,6 +38,9 @@
       .npm-button {
         @include clickable($text-color-1, $npm-color);
       }
+      .bitcoin-button {
+        @include clickable($text-color-1, $bitcoin-color);
+      }
     }
   }
 }
