--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,11 +1,3 @@
-{%- if jekyll.environment != 'development' -%}
-  {%- if site.comments.provider == 'disqus' -%}
-    {%- include comments-providers/disqus.html -%}
-  {%- elsif site.comments.provider == 'gitalk' -%}
-    {%- include comments-providers/gitalk.html -%}
-  {%- elsif site.comments.provider == 'valine' -%}
-    {%- include comments-providers/valine.html -%}
-  {%- elsif site.comments.provider == 'custom' -%}
-    {%- include comments-providers/custom.html -%}
-  {%- endif -%}
+{%- if jekyll.environment != 'development' and site.comments.provider -%}
+  {%- include comments-providers/{{ site.comments.provider }}.html -%}
 {%- endif -%}
