--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -129,6 +129,9 @@ article_header:
 
               </div>
             </div>
+            {%- if _section.type == "contact" -%}
+              {% include contact-form.html, fields: section.fields %}
+            {%- endif -%}
           {%- endif -%}
 
       {%- if _section.image.full_width == true -%}
