--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -129,9 +129,6 @@ article_header:
 
               </div>
             </div>
-            {%- if _section.type == "contact" -%}
-              {% include contact-form.html, fields: section.fields %}
-            {%- endif -%}
           {%- endif -%}
 
       {%- if _section.image.full_width == true -%}
@@ -179,6 +176,9 @@ article_header:
         <p>{{ _section.content }}</p>
       {%- endif -%}
       </section>
+    {%- if _section.type == "contact" -%}
+      {%- include contact-form.html fields=_section.fields -%}
+    {%- endif -%}
   {%- endfor -%}
   </div>
 </div>
