--- a/_includes/contact-form-providers/fncontact.html
+++ b/_includes/contact-form-providers/fncontact.html
@@ -1,10 +1,7 @@
 {%- if site.contact.fncontact.id -%}
-<form id="contact-form" action="https://fncontact.com/{{ site.contact.fncontact.id }}/post" method="POST" onsubmit="return submitForm();">
+<form id="contact-form" action="https://fncontact.com/{{ page.fncontact-id | default: site.contact.fncontact.id }}/post" method="POST" onsubmit="return submitForm();">
   {%- for field in include.fields -%}
     {%- assign type = field.type | default: 'text' -%}
-    {%- if type != "submit" -%}
-      <label for="{{ field.name }}">{{ field.text }}</label>
-    {%- endif -%}
     {%- assign tag = field.tag | default: "input" -%}
     {%- if field.required == true -%}
       {%- assign required = "required " -%}
