--- a/_includes/author-links.html
+++ b/_includes/author-links.html
@@ -25,7 +25,7 @@
     {%- include snippets/get-locale-string.html key='EMAIL_ME' -%}
     {%- if _author.email -%}
       <li title="{{ _locale_string_email }}">
-      <a class="button button--circle mail-button" itemprop="email" href="mailto:{{ _author.email }}" target="_blank">
+      <a class="button button--circle mail-button" itemprop="email" href="/{{ page.lang }}{{ _author.email }}">
         <i class="fas fa-envelope"></i>
       </a>
     {%- endif -%}
@@ -33,7 +33,7 @@
 
     {%- if _author.facebook -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Facebook' }}">
-        <a class="button button--circle facebook-button" itemprop="sameAs" href="https://www.facebook.com/{{ _author.facebook }}" target="_blank">
+        <a class="button button--circle facebook-button" itemprop="sameAs" href="https://www.facebook.com/{{ _author.facebook }}">
           <div class="icon">{%- include svg/icon/social/facebook.svg -%}</div>
         </a>
       </li>
@@ -41,7 +41,7 @@
 
     {%- if _author.twitter -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Twitter' }}">
-        <a class="button button--circle twitter-button" itemprop="sameAs" href="https://twitter.com/{{ _author.twitter }}" target="_blank">
+        <a class="button button--circle twitter-button" itemprop="sameAs" href="https://twitter.com/{{ _author.twitter }}">
           <div class="icon">{%- include svg/icon/social/twitter.svg -%}</div>
         </a>
       </li>
@@ -49,7 +49,7 @@
 
     {%- if _author.weibo -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Weibo' }}">
-        <a class="button button--circle weibo-button" itemprop="sameAs" href="https://weibo.com/{{ _author.weibo }}" target="_blank">
+        <a class="button button--circle weibo-button" itemprop="sameAs" href="https://weibo.com/{{ _author.weibo }}">
           <div class="icon">{%- include svg/icon/social/weibo.svg -%}</div>
         </a>
       </li>
@@ -57,7 +57,7 @@
 
     {%- if _author.googleplus -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Google+' }}">
-        <a class="button button--circle googlepluse-button" itemprop="sameAs" href="https://plus.google.com/u/0/{{ _author.googleplus }}" target="_blank">
+        <a class="button button--circle googlepluse-button" itemprop="sameAs" href="https://plus.google.com/u/0/{{ _author.googleplus }}">
           <div class="icon">{%- include svg/icon/social/googleplus.svg -%}</div>
         </a>
       </li>
@@ -65,7 +65,7 @@
 
     {%- if _author.telegram -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Telegram' }}">
-        <a class="button button--circle telegram-button" itemprop="sameAs" href="https://t.me/{{ _author.telegram }}" target="_blank">
+        <a class="button button--circle telegram-button" itemprop="sameAs" href="https://t.me/{{ _author.telegram }}">
           <div class="icon">{%- include svg/icon/social/telegram.svg -%}</div>
         </a>
       </li>
@@ -73,7 +73,7 @@
 
     {%- if _author.medium -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Medium' }}">
-        <a class="button button--circle medium-button" itemprop="sameAs" href="https://medium.com/{{ _author.medium }}" target="_blank">
+        <a class="button button--circle medium-button" itemprop="sameAs" href="https://medium.com/{{ _author.medium }}">
           <div class="icon">{%- include svg/icon/social/medium.svg -%}</div>
         </a>
       </li>
@@ -81,7 +81,7 @@
 
     {%- if _author.zhihu -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Zhihu' }}">
-        <a class="button button--circle zhihu-button" itemprop="sameAs" href="https://www.zhihu.com/people/{{ _author.zhihu }}" target="_blank">
+        <a class="button button--circle zhihu-button" itemprop="sameAs" href="https://www.zhihu.com/people/{{ _author.zhihu }}">
           <div class="icon">{%- include svg/icon/social/zhihu.svg -%}</div>
         </a>
       </li>
@@ -89,7 +89,7 @@
 
     {%- if _author.douban -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Douban' }}">
-        <a class="button button--circle douban-button" itemprop="sameAs" href="https://www.douban.com/people/{{ _author.douban }}" target="_blank">
+        <a class="button button--circle douban-button" itemprop="sameAs" href="https://www.douban.com/people/{{ _author.douban }}">
           <div class="icon">{%- include svg/icon/social/douban.svg -%}</div>
         </a>
       </li>
@@ -97,7 +97,7 @@
 
     {%- if _author.linkedin -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Linkedin' }}">
-        <a class="button button--circle linkedin-button" itemprop="sameAs" href="https://www.linkedin.com/in/{{ _author.linkedin }}" target="_blank">
+        <a class="button button--circle linkedin-button" itemprop="sameAs" href="https://www.linkedin.com/in/{{ _author.linkedin }}">
           <div class="icon">{%- include svg/icon/social/linkedin.svg -%}</div>
         </a>
       </li>
@@ -105,7 +105,7 @@
 
     {%- if _author.github -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Github' }}">
-        <a class="button button--circle github-button" itemprop="sameAs" href="https://github.com/{{ _author.github }}" target="_blank">
+        <a class="button button--circle github-button" itemprop="sameAs" href="https://github.com/{{ _author.github }}">
           <div class="icon">{%- include svg/icon/social/github.svg -%}</div>
         </a>
       </li>
@@ -113,7 +113,7 @@
 
     {%- if _author.npm -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'npm' }}">
-        <a class="button button--circle npm-button" itemprop="sameAs" href="https://www.npmjs.com/~{{ _author.npm }}" target="_blank">
+        <a class="button button--circle npm-button" itemprop="sameAs" href="https://www.npmjs.com/~{{ _author.npm }}">
           <div class="icon">{%- include svg/icon/social/npm.svg -%}</div>
         </a>
       </li>
