--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -1,12 +1,13 @@
 ---
-layout: page
+layout: landing
 title: 404
 show_title: false
+article_header: false
 ---
 <div class="layout--404">
   <div class="sign">
     <h1>404</h1>
-    <p>Page not found :(</p>
+    <p>Page not found</p>
   </div>
 </div>
 
