--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,6 +28,7 @@
     "common/components/button",
     "common/components/image",
     "common/components/card",
+    "common/components/contact-form",
     "common/components/gallery",
     "common/components/hero",
     "common/components/menu",
