--- a/_includes/author-links.html
+++ b/_includes/author-links.html
@@ -22,10 +22,11 @@
 
     {%- endif -%}
 
-    {%- include snippets/get-locale-string.html key='EMAIL_ME' -%}
     {%- if _author.email -%}
+    {%- include snippets/get-lang.html -%}
+    {%- assign _lang = __return -%}
       <li title="{{ _locale_string_email }}">
-      <a class="button button--circle mail-button" itemprop="email" href="/{{ page.lang }}{{ _author.email }}">
+      <a class="button button--circle mail-button" itemprop="email" href="/{{ _lang }}{{ _author.email }}">
         <i class="fas fa-envelope"></i>
       </a>
     {%- endif -%}
