--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: articles
+root: /blog
 titles:
   en      : &EN       Home
   en-GB   : *EN
@@ -28,7 +29,7 @@ articles:
   show_cover: false
   show_excerpt: true
   show_readmore: true
-  show_info: true
+  show_info: true  
 ---
 <div class="layout--home">
   {%- include paginator.html -%}
