--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -70,13 +70,14 @@ layout: base
       <div class="page__main-inner">
       {%- if _header != false -%}
         <div class="page__header d-print-none" fade-in="{{ page.header.fade-in | default: "none" }}">
+        {%- assign _root = page.root | default: layout.root -%}
         {%- assign _header_theme = page.header.theme | default: layout.header.theme -%}        
         {%- if _header_theme == 'dark'-%}
-          {%- include header.html theme='dark' background=page.header.background path=page.root-%}
+          {%- include header.html theme='dark' background=page.header.background path=_root-%}
         {%- elsif _header_theme == 'light' -%}
-          {%- include header.html theme='light' background=page.header.background path=page.root -%}
+          {%- include header.html theme='light' background=page.header.background path=_root -%}
         {%- else -%}
-          {%- include header.html path=page.root -%}
+          {%- include header.html path=_root -%}
         {%- endif -%}
         </div>
       {%- endif -%}
