--- a/_sass/common/components/_contact-form.scss
+++ b/_sass/common/components/_contact-form.scss
@@ -1,12 +1,18 @@
+form {
+  width: 50%;
+  margin: 0 auto;
+  display: grid;
+}
+
 form > [type=submit] {
   @extend .button;
   @extend .button--lg;
   @extend .button--pill;
   @extend .button--outline-info;
+  width: 25%;
 }
 
 input:not([type=submit]), textarea {
-  width: 50%;
   padding: 12px;
 }
 
