--- a/_sass/common/components/_contact-form.scss
+++ b/_sass/common/components/_contact-form.scss
@@ -1,21 +1,34 @@
 form {
-  width: 500px;
+  width: 50%;
   margin: 0 auto;
   display: grid;
+
+  [type=submit] {
+    @extend .button;
+    @extend .button--lg;
+    @extend .button--pill;
+    @extend .button--outline-info;
+    width: 25%;
+  }
+  
+  input:not([type=submit]), textarea {
+    padding: 12px;
+  }
+  
+  textarea {
+    resize: vertical;
+  }
+  
 }
 
-form > [type=submit] {
-  @extend .button;
-  @extend .button--lg;
-  @extend .button--pill;
-  @extend .button--outline-info;
-  width: 25%;
+@media (min-width: 500px) and (max-width: 950px) {
+  form {
+    width: 80%;
+  }
 }
 
-input:not([type=submit]), textarea {
-  padding: 12px;
-}
-
-textarea {
-  resize: vertical;
+@media (max-width: 500px) {
+  form {
+    width: 100%;    
+  }
 }
